--- a/_posts/tumblr/2011-02-05-haemnet.md
+++ b/_posts/tumblr/2011-02-05-haemnet.md
@@ -9,8 +9,8 @@ tags:
 - work
 - logos
 - yoomee
-img: haemnet_logo.jpg
+img: haemnet.jpg
 intro: “A logo I did for Haemnet“
 
 ---
-![Haemnet logo](haemnet_logo.jpg)
+![Haemnet logo](haemnet.jpg)
