style all posts link

--- a/_posts/tumblr/2011-02-05-haemnet.md
+++ b/_posts/tumblr/2011-02-05-haemnet.md
@@ -9,8 +9,8 @@ tags:
 - work
 - logos
 - yoomee
-img: haemnet.jpg
+img: haemnet4.jpg
 intro: “A logo I did for Haemnet“
 
 ---
-![Haemnet logo](haemnet.jpg)
+![Haemnet logo]({{ site.baseurl }}/downloads/haemnet4.jpg)
